--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^14.14.21",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
+    "copy-webpack-plugin": "^9.0.0",
     "eslint": "^7.25.0",
     "eslint-plugin-prettier": "^3.3.1",
     "html-webpack-plugin": "^5.3.1",
